--- a/styles/Calendar.module.scss
+++ b/styles/Calendar.module.scss
@@ -47,5 +47,9 @@
             border: 3px solid #179BE5;
             border-radius:5px;
         }
+
+        .prevmonth {
+            color: grey;
+        }
     }
 }
